--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <style>
+       background-color:yellow;
+    </style>
+    
+  </head>
+  <body>
+    창문은 언제나 열려있습니다.
+  </body>
+</html>
