--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html>
   <head>
     <style>
-      body {background-color:red;}
+      body{background-color: yellow;
+      color:blue;
+      }
     </style>
-    
   </head>
   <body>
     창문은 언제나 열려있습니다.
